--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
                         <ul>
                             <li>
                                 <a class="filter" href="#" data-filter=".web"
-                                    >Web Application Project</a
+                                    >Riwayat pendidikan</a
                                 >
                             </li>
                            
